@@ -26,11 +26,8 @@ import org.apache.kafka.server.common.MetadataVersionTestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-import static java.util.Collections.emptyList;
 import static org.apache.kafka.server.common.MetadataVersion.FEATURE_NAME;
 import static org.apache.kafka.server.common.MetadataVersion.IBP_3_3_IV3;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -50,7 +47,7 @@ public class BootstrapMetadataTest {
 
     @Test
     public void testFromVersion() {
-        assertEquals(new BootstrapMetadata(Collections.singletonList(
+        assertEquals(new BootstrapMetadata(List.of(
             new ApiMessageAndVersion(new FeatureLevelRecord().
                 setName(FEATURE_NAME).
                 setFeatureLevel((short) 7), (short) 0)),
@@ -68,7 +65,7 @@ public class BootstrapMetadataTest {
     public void testFromRecordsListWithoutMetadataVersion() {
         assertEquals("No FeatureLevelRecord for metadata.version was found in the bootstrap " +
             "metadata from quux", assertThrows(RuntimeException.class,
-                () -> BootstrapMetadata.fromRecords(emptyList(), "quux")).getMessage());
+                () -> BootstrapMetadata.fromRecords(List.of(), "quux")).getMessage());
     }
 
     private static final ApiMessageAndVersion MV_10 =
@@ -93,38 +90,38 @@ public class BootstrapMetadataTest {
 
     @Test
     public void testCopyWithNewFeatureRecord() {
-        assertEquals(BootstrapMetadata.fromRecords(Arrays.asList(MV_10, FOO_1), "src"),
-            BootstrapMetadata.fromRecords(Arrays.asList(MV_10), "src").
+        assertEquals(BootstrapMetadata.fromRecords(List.of(MV_10, FOO_1), "src"),
+            BootstrapMetadata.fromRecords(List.of(MV_10), "src").
                 copyWithFeatureRecord("foo", (short) 1));
     }
 
     @Test
     public void testFeatureLevelForMetadataVersion() {
         assertEquals((short) 11, BootstrapMetadata.
-            fromRecords(Arrays.asList(MV_10, MV_11), "src").
+            fromRecords(List.of(MV_10, MV_11), "src").
                 featureLevel(FEATURE_NAME));
     }
 
     @Test
     public void testCopyWithModifiedFeatureRecord() {
-        assertEquals(BootstrapMetadata.fromRecords(Arrays.asList(MV_10, FOO_2), "src"),
-            BootstrapMetadata.fromRecords(Arrays.asList(MV_10, FOO_1), "src").
+        assertEquals(BootstrapMetadata.fromRecords(List.of(MV_10, FOO_2), "src"),
+            BootstrapMetadata.fromRecords(List.of(MV_10, FOO_1), "src").
                 copyWithFeatureRecord("foo", (short) 2));
     }
 
     @Test
     public void testFeatureLevelForFeatureThatIsNotSet() {
         assertEquals((short) 0, BootstrapMetadata.
-            fromRecords(Arrays.asList(MV_10), "src").featureLevel("foo"));
+            fromRecords(List.of(MV_10), "src").featureLevel("foo"));
     }
 
     @Test
     public void testFeatureLevelForFeature() {
         assertEquals((short) 2, BootstrapMetadata.
-            fromRecords(Arrays.asList(MV_10, FOO_2), "src").featureLevel("foo"));
+            fromRecords(List.of(MV_10, FOO_2), "src").featureLevel("foo"));
     }
 
-    static final List<ApiMessageAndVersion> RECORDS_WITH_OLD_METADATA_VERSION = Collections.singletonList(
+    static final List<ApiMessageAndVersion> RECORDS_WITH_OLD_METADATA_VERSION = List.of(
             new ApiMessageAndVersion(new FeatureLevelRecord().
                 setName(FEATURE_NAME).
                 setFeatureLevel(MetadataVersionTestUtils.IBP_3_0_IV1_FEATURE_LEVEL), (short) 0));
